<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:id="@+id/grupo_compartir">
        <item android:id="@+id/action_compartir"
            android:title="Compartir"
            android:icon="@drawable/ic_share_white_24dp"
            android:orderInCategory="100"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/grupo_pedidos">
        <item android:id="@+id/action_pedidos"
            android:title="Pedidos"
            android:icon="@drawable/ic_assignment_white_24dp"
            android:orderInCategory="101"
            app:showAsAction="always" />
        <item android:id="@+id/action_crear_pedido"
            android:title="Crear pedido"
            android:icon="@drawable/ic_assignment_white_24dp"
            android:orderInCategory="101"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/grupo_guardar_persona">
        <item android:id="@+id/action_guardar"
            android:title="Guardar"
            android:icon="@drawable/ic_save_white_24dp"
            android:orderInCategory="102"
            app:showAsAction="always" />

        <item android:id="@+id/action_borrar"
            android:title="Borrar"
            android:icon="@drawable/ic_delete_forever_white_24dp"
            android:orderInCategory="103"
            app:showAsAction="never" />
    </group>
</menu>
